hphp/test/zend/bad/errmsg_034.php
<?php

class test {

	static function __clone() {
	}
}

echo "Done\n";
?>